--- a/index.html
+++ b/index.html
@@ -8,71 +8,43 @@
 </head>
 <body class="bg-gray-100 text-gray-900">
 
-  <!-- Profile Image Section -->
-  <section class="py-12 px-6 md:px-20 text-center">
-    <img src="profile.jpg" alt="Shahed Md. Rokibul Hasan" class="w-40 h-40 mx-auto rounded-full shadow-md mb-4 object-cover">
-    <h2 class="text-xl font-semibold">Shahed Md. Rokibul Hasan</h2>
-  </section>
-
-  <!-- Hero Section -->
-  <section class="min-h-screen flex items-center justify-center bg-blue-900 text-white">
-    <div class="text-center px-4">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">Shahed Md. Rokibul Hasan</h1>
-      <p class="text-xl">Aspiring Professional | Humanities Background | Computer Skilled</p>
-      <a href="#contact" class="inline-block mt-6 px-6 py-2 bg-white text-blue-900 font-semibold rounded-lg shadow hover:bg-gray-200">Contact Me</a>
-    </div>
+  <!-- Profile & Hero Section -->
+  <section class="min-h-screen flex flex-col items-center justify-center bg-blue-900 text-white text-center px-4">
+    <img src="profile.jpg" alt="Shahed Md. Rokibul Hasan" class="w-40 h-40 rounded-full shadow-lg mb-4 object-cover">
+    <h1 class="text-4xl md:text-5xl font-bold mb-2">Shahed Md. Rokibul Hasan</h1>
+    <p class="text-xl">Former Indian COD Operator | Cyber Saver | Volunteer | Ex-Scout</p>
+    <a href="#contact" class="mt-4 inline-block px-6 py-2 bg-white text-blue-900 font-semibold rounded-lg shadow hover:bg-gray-200">Contact Me</a>
+    <a href="rakib_cv.pdf" download class="mt-4 inline-block px-6 py-2 bg-green-500 text-white font-semibold rounded-lg shadow hover:bg-green-600">📄 Download CV</a>
   </section>
 
   <!-- About Section -->
   <section class="py-12 px-6 md:px-20">
-    <h2 class="text-2xl font-bold mb-4 border-b pb-2">Personal Information</h2>
+    <h2 class="text-2xl font-bold mb-4 border-b pb-2">Involvements & Volunteering</h2>
     <ul class="list-disc pl-5 space-y-1">
-      <li><strong>Father's Name:</strong> Md Abdur Razzak</li>
-      <li><strong>Mother's Name:</strong> Mst Zohora Khahtun</li>
-      <li><strong>Date of Birth:</strong> 03/01/2004</li>
-      <li><strong>Nationality:</strong> Bangladeshi</li>
-      <li><strong>Sex:</strong> Male</li>
-      <li><strong>Marital Status:</strong> Unmarried</li>
-      <li><strong>Religion:</strong> Islam</li>
-      <li><strong>Blood Group:</strong> B+</li>
-      <li><strong>NID No:</strong> 1525834527</li>
-      <li><strong>Height:</strong> 5ft 8in</li>
+      <li>Former Indian COD Operator at J.P Express</li>
+      <li>General Member of Bogura District at Volunteer for Bangladesh</li>
+      <li>Cyber Saver of CYBER SAVER campaign at Chalkboard Communications Ltd.</li>
+      <li>Former member at Bishwo Shahitto Kendro (BSK)</li>
+      <li>Former Scout at Bangladesh Scouts</li>
     </ul>
-
-    <h2 class="text-2xl font-bold mt-10 mb-4 border-b pb-2">Permanent Address</h2>
-    <p>Bajemujrai, Post: Rajarhat, Thana: Rajarhat, District: Kurigram, Division: Rangpur</p>
   </section>
 
-  <!-- Education Section -->
-  <section class="py-12 px-6 md:px-20 bg-white">
-    <h2 class="text-2xl font-bold mb-4 border-b pb-2">Education</h2>
-    <div class="space-y-4">
-      <div>
-        <h3 class="font-semibold text-lg">H.S.C - Humanities</h3>
-        <p>GPA: 4.73 / 5.00</p>
-        <p>Bogura Cantonment Public School & College, Rajshahi Board (2022)</p>
-      </div>
-      <div>
-        <h3 class="font-semibold text-lg">S.S.C - Humanities</h3>
-        <p>GPA: 4.72 / 5.00</p>
-        <p>Cantonment Board High School, Ghatail, Dhaka Board (2021)</p>
-      </div>
+  <!-- Social Section -->
+  <section class="py-10 text-center">
+    <h2 class="text-xl font-bold mb-4">Connect with Me</h2>
+    <div class="flex justify-center space-x-4">
+      <a href="https://www.facebook.com/share/1B9Yris73e/?mibextid=qi2Omg" target="_blank" class="text-blue-600 underline">Facebook</a>
+      <a href="https://www.instagram.com/_kabb0_?igsh=eG5jcTlhaDV4Y3U1" target="_blank" class="text-pink-600 underline">Instagram</a>
+      <a href="mailto:rakib.kabbo111@gmail.com" class="text-red-600 underline">Email</a>
+      <a href="https://wa.me/8801795796440" target="_blank" class="text-green-600 underline">WhatsApp</a>
     </div>
-  </section>
-
-  <!-- Skills Section -->
-  <section class="py-12 px-6 md:px-20">
-    <h2 class="text-2xl font-bold mb-4 border-b pb-2">Skills</h2>
-    <ul class="list-disc pl-5">
-      <li>Completed 6-month course on Computer Office Applications</li>
-    </ul>
   </section>
 
   <!-- Contact Section -->
   <section id="contact" class="py-12 px-6 md:px-20 bg-blue-900 text-white">
     <h2 class="text-2xl font-bold mb-4 border-b border-white pb-2">Contact</h2>
     <p><strong>Mobile:</strong> +8801795796440</p>
-    <p><strong>Email:</strong> rakib.kabbo111@gamil.com</p>
+    <p><strong>Email:</strong> rakib.kabbo111@gmail.com</p>
   </section>
 
   <!-- Footer -->
