--- a/index.html
+++ b/index.html
@@ -5,51 +5,76 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shahed Md. Rokibul Hasan - Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    :root {
+      --silver: #c0c0c0;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-black text-gray-100">
 
-  <!-- Profile & Hero Section -->
-  <section class="min-h-screen flex flex-col items-center justify-center bg-blue-900 text-white text-center px-4">
-    <img src="profile.jpg" alt="Shahed Md. Rokibul Hasan" class="w-40 h-40 rounded-full shadow-lg mb-4 object-cover">
-    <h1 class="text-4xl md:text-5xl font-bold mb-2">Shahed Md. Rokibul Hasan</h1>
-    <p class="text-xl">Former Indian COD Operator | Cyber Saver | Volunteer | Ex-Scout</p>
-    <a href="#contact" class="mt-4 inline-block px-6 py-2 bg-white text-blue-900 font-semibold rounded-lg shadow hover:bg-gray-200">Contact Me</a>
-    <a href="rakib_cv.pdf" download class="mt-4 inline-block px-6 py-2 bg-green-500 text-white font-semibold rounded-lg shadow hover:bg-green-600">📄 Download CV</a>
+  <!-- Header -->
+  <header class="bg-orange-600 text-white py-10 text-center">
+    <img src="profile.jpg" alt="Profile" class="w-28 h-28 mx-auto rounded-full shadow-md object-cover mb-4">
+    <h1 class="text-3xl font-bold">Shahed Md. Rokibul Hasan</h1>
+    <p class="text-lg">Ex-COD Operator | Volunteer | Cyber Saver | Scout</p>
+  </header>
+
+  <!-- Personal Information -->
+  <section class="py-10 px-6 md:px-24 bg-[var(--silver)] text-black">
+    <h2 class="text-2xl font-bold mb-4 border-b pb-2">Personal Information</h2>
+    <ul class="list-disc pl-5 space-y-1">
+      <li><strong>Father's Name:</strong> Md Abdur Razzak</li>
+      <li><strong>Mother's Name:</strong> Mst Zohora Khahtun</li>
+      <li><strong>Date of Birth:</strong> 03/01/2004</li>
+      <li><strong>Nationality:</strong> Bangladeshi</li>
+      <li><strong>Sex:</strong> Male</li>
+      <li><strong>Marital Status:</strong> Unmarried</li>
+      <li><strong>Religion:</strong> Islam</li>
+      <li><strong>Blood Group:</strong> B+</li>
+      <li><strong>NID No:</strong> 1525834527</li>
+      <li><strong>Height:</strong> 5ft 8in</li>
+      <li><strong>Address:</strong> Bajemujrai, Rajarhat, Kurigram, Rangpur</li>
+    </ul>
   </section>
 
-  <!-- About Section -->
-  <section class="py-12 px-6 md:px-20">
-    <h2 class="text-2xl font-bold mb-4 border-b pb-2">Involvements & Volunteering</h2>
+  <!-- Involvements -->
+  <section class="py-10 px-6 md:px-24 bg-gray-900 text-white">
+    <h2 class="text-2xl font-bold text-orange-400 mb-4 border-b pb-2">Involvements</h2>
     <ul class="list-disc pl-5 space-y-1">
       <li>Former Indian COD Operator at J.P Express</li>
-      <li>General Member of Bogura District at Volunteer for Bangladesh</li>
-      <li>Cyber Saver of CYBER SAVER campaign at Chalkboard Communications Ltd.</li>
-      <li>Former member at Bishwo Shahitto Kendro (BSK)</li>
+      <li>General Member of Volunteer for Bangladesh (Bogura District)</li>
+      <li>Cyber Saver at Chalkboard Communications Ltd.</li>
+      <li>Former Member at Bishwo Shahitto Kendro (BSK)</li>
       <li>Former Scout at Bangladesh Scouts</li>
     </ul>
   </section>
 
-  <!-- Social Section -->
-  <section class="py-10 text-center">
-    <h2 class="text-xl font-bold mb-4">Connect with Me</h2>
-    <div class="flex justify-center space-x-4">
-      <a href="https://www.facebook.com/share/1B9Yris73e/?mibextid=qi2Omg" target="_blank" class="text-blue-600 underline">Facebook</a>
-      <a href="https://www.instagram.com/_kabb0_?igsh=eG5jcTlhaDV4Y3U1" target="_blank" class="text-pink-600 underline">Instagram</a>
-      <a href="mailto:rakib.kabbo111@gmail.com" class="text-red-600 underline">Email</a>
-      <a href="https://wa.me/8801795796440" target="_blank" class="text-green-600 underline">WhatsApp</a>
+  <!-- Buttons -->
+  <section class="py-10 text-center space-y-4">
+    <h2 class="text-2xl font-bold text-orange-400">Connect & Download</h2>
+    <div class="flex justify-center flex-wrap gap-4 mt-4">
+      <a href="mailto:rakib.kabbo111@gmail.com" class="flex items-center gap-2 bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">
+        📧 Email
+      </a>
+      <a href="https://wa.me/8801795796440" target="_blank" class="flex items-center gap-2 bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">
+        📱 WhatsApp
+      </a>
+      <a href="rakib_cv.pdf" download class="flex items-center gap-2 bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700">
+        📄 Download CV
+      </a>
+      <a href="https://www.facebook.com/share/1B9Yris73e/?mibextid=qi2Omg" target="_blank" class="flex items-center gap-2 bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800">
+        🔵 Facebook
+      </a>
+      <a href="https://www.instagram.com/_kabb0_?igsh=eG5jcTlhaDV4Y3U1" target="_blank" class="flex items-center gap-2 bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600">
+        📷 Instagram
+      </a>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-12 px-6 md:px-20 bg-blue-900 text-white">
-    <h2 class="text-2xl font-bold mb-4 border-b border-white pb-2">Contact</h2>
-    <p><strong>Mobile:</strong> +8801795796440</p>
-    <p><strong>Email:</strong> rakib.kabbo111@gmail.com</p>
-  </section>
-
   <!-- Footer -->
-  <footer class="bg-gray-800 text-white py-4 text-center">
-    <p>&copy; 2025 Shahed Md. Rokibul Hasan. All rights reserved.</p>
+  <footer class="bg-gray-950 text-white text-center py-4">
+    &copy; 2025 Shahed Md. Rokibul Hasan. All rights reserved.
   </footer>
 </body>
 </html>
