--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
 </head>
 <body class="bg-black text-gray-100">
 
-  <!-- Header -->
-  <header class="bg-orange-600 text-white py-10 text-center">
-    <img src="profile.jpg" alt="Profile" class="w-28 h-28 mx-auto rounded-full shadow-md object-cover mb-4">
-    <h1 class="text-3xl font-bold">Shahed Md. Rokibul Hasan</h1>
-    <p class="text-lg">Ex-COD Operator | Volunteer | Cyber Saver | Scout</p>
-  </header>
+  <!-- Top Header -->
+  <section class="bg-orange-600 py-10 px-6 md:px-24 flex flex-col md:flex-row items-center md:items-start gap-6">
+    <img src="profile.jpg" alt="Profile" class="w-40 h-40 rounded-full shadow-lg object-cover">
+    <div>
+      <h1 class="text-3xl font-bold text-white">Shahed Md. Rokibul Hasan</h1>
+      <p class="text-sm text-white mt-1">📧 rakib.kabbo111@gmail.com | 📱 +8801795796440</p>
+      <div class="flex flex-wrap gap-3 mt-4">
+        <a href="mailto:rakib.kabbo111@gmail.com" class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">📧 Email</a>
+        <a href="https://wa.me/8801795796440" target="_blank" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">📱 WhatsApp</a>
+        <a href="rakib_cv.pdf" download class="bg-orange-700 text-white px-4 py-2 rounded hover:bg-orange-800">📄 Download CV</a>
+        <a href="https://www.facebook.com/share/1B9Yris73e/?mibextid=qi2Omg" target="_blank" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800">🔵 Facebook</a>
+        <a href="https://www.instagram.com/_kabb0_?igsh=eG5jcTlhaDV4Y3U1" target="_blank" class="bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600">📷 Instagram</a>
+      </div>
+    </div>
+  </section>
 
-  <!-- Personal Information -->
+  <!-- Personal Info -->
   <section class="py-10 px-6 md:px-24 bg-[var(--silver)] text-black">
     <h2 class="text-2xl font-bold mb-4 border-b pb-2">Personal Information</h2>
     <ul class="list-disc pl-5 space-y-1">
@@ -34,13 +43,24 @@
       <li><strong>Blood Group:</strong> B+</li>
       <li><strong>NID No:</strong> 1525834527</li>
       <li><strong>Height:</strong> 5ft 8in</li>
-      <li><strong>Address:</strong> Bajemujrai, Rajarhat, Kurigram, Rangpur</li>
+    </ul>
+  </section>
+
+  <!-- Address -->
+  <section class="py-10 px-6 md:px-24 bg-gray-900 text-white">
+    <h2 class="text-2xl font-bold text-orange-400 mb-4 border-b pb-2">Permanent Address</h2>
+    <ul class="list-disc pl-5 space-y-1">
+      <li><strong>Village:</strong> Bajemujrai</li>
+      <li><strong>Post:</strong> Rajarhat</li>
+      <li><strong>Thana:</strong> Rajarhat</li>
+      <li><strong>District:</strong> Kurigram</li>
+      <li><strong>Division:</strong> Rangpur</li>
     </ul>
   </section>
 
   <!-- Involvements -->
-  <section class="py-10 px-6 md:px-24 bg-gray-900 text-white">
-    <h2 class="text-2xl font-bold text-orange-400 mb-4 border-b pb-2">Involvements</h2>
+  <section class="py-10 px-6 md:px-24 bg-[var(--silver)] text-black">
+    <h2 class="text-2xl font-bold mb-4 border-b pb-2">Involvements</h2>
     <ul class="list-disc pl-5 space-y-1">
       <li>Former Indian COD Operator at J.P Express</li>
       <li>General Member of Volunteer for Bangladesh (Bogura District)</li>
@@ -50,30 +70,35 @@
     </ul>
   </section>
 
-  <!-- Buttons -->
-  <section class="py-10 text-center space-y-4">
-    <h2 class="text-2xl font-bold text-orange-400">Connect & Download</h2>
-    <div class="flex justify-center flex-wrap gap-4 mt-4">
-      <a href="mailto:rakib.kabbo111@gmail.com" class="flex items-center gap-2 bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">
-        📧 Email
-      </a>
-      <a href="https://wa.me/8801795796440" target="_blank" class="flex items-center gap-2 bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">
-        📱 WhatsApp
-      </a>
-      <a href="rakib_cv.pdf" download class="flex items-center gap-2 bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700">
-        📄 Download CV
-      </a>
-      <a href="https://www.facebook.com/share/1B9Yris73e/?mibextid=qi2Omg" target="_blank" class="flex items-center gap-2 bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-800">
-        🔵 Facebook
-      </a>
-      <a href="https://www.instagram.com/_kabb0_?igsh=eG5jcTlhaDV4Y3U1" target="_blank" class="flex items-center gap-2 bg-pink-500 text-white px-4 py-2 rounded hover:bg-pink-600">
-        📷 Instagram
-      </a>
-    </div>
+  <!-- Education -->
+  <section class="py-10 px-6 md:px-24 bg-gray-900 text-white">
+    <h2 class="text-2xl font-bold text-orange-400 mb-4 border-b pb-2">Education</h2>
+    <ul class="list-disc pl-5 space-y-1">
+      <li><strong>H.S.C (Humanities):</strong> GPA 4.73 / 5.00 — Bogura Cantonment Public School & College (Rajshahi Board, 2022)</li>
+      <li><strong>S.S.C (Humanities):</strong> GPA 4.72 / 5.00 — Cantonment Board High School, Ghatail (Dhaka Board, 2021)</li>
+    </ul>
+  </section>
+
+  <!-- Skills -->
+  <section class="py-10 px-6 md:px-24 bg-[var(--silver)] text-black">
+    <h2 class="text-2xl font-bold mb-4 border-b pb-2">Skills</h2>
+    <ul class="list-disc pl-5 space-y-1">
+      <li>Completed 6-month course on Computer Office Applications</li>
+      <li>Skilled in MS Word, Excel, PowerPoint</li>
+      <li>Typing, formatting, basic design experience</li>
+    </ul>
+  </section>
+
+  <!-- Contact -->
+  <section class="py-12 px-6 md:px-24 bg-gray-900 text-white text-center">
+    <h2 class="text-2xl font-bold mb-4 border-b border-white pb-2">Contact</h2>
+    <p><strong>Mobile:</strong> +8801795796440</p>
+    <p><strong>Email:</strong> rakib.kabbo111@gmail.com</p>
+    <a href="rakib_cv.pdf" download class="mt-6 inline-block px-6 py-2 bg-orange-600 text-white font-semibold rounded-lg shadow hover:bg-orange-700">📄 Download CV</a>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-950 text-white text-center py-4">
+  <footer class="bg-black text-white text-center py-4">
     &copy; 2025 Shahed Md. Rokibul Hasan. All rights reserved.
   </footer>
 </body>
